# spotify-song-popuparity

./: .gitignore  README.md  pyproject.toml  spotify_popularity_demo.py
data/output/: All_I_Want_for_Christmas_Is_You.csv  Billie_Jean.csv  Bohemian_Rhapsody.csv  Buffalo_Stance.csv  Dreams.csv
data/plots/: Billie_Jean_models_20250712_155415.html  Buffalo_Stance_models_20250712_161150.html
data/spotify_popularity/plots/: All_I_Want_for_Christmas_Is_You_models_20250712_160419.html  Thunder_models_20250712_155724.html
popularity_forecast/: __init__.py  simple_forecast.py  song_popularity_history.py
popularity_forecast/models/: __init__.py  chronos_models.py  prophet_models.py  timesfm_models.py
popularity_forecast/utils/: __init__.py  spotify_api.py
tests/: __init__.py
tests/models/: test_chronos_models.py
